--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Lada Studio</title>
-    <link rel="stylesheet" href="https://kyevmin.github.io/sanya_try/bootstrap.min.css">
-    <link rel="stylesheet" href="https://kyevmin.github.io/sanya_try/style.css">
+    <link rel="stylesheet" href="https://kyevmin.github.io/sanya_try/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://kyevmin.github.io/sanya_try/css/style.css">
 
     <script src="https://kyevmin.github.io/sanya_try/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="https://kyevmin.github.io/sanya_try/bootstrap.min.js" type="text/javascript"></script>
