--- a/index.html
+++ b/index.html
@@ -49,7 +49,37 @@
 						  </div> 
 						  <!-- Collect the nav links, forms, and other content for toggling --> 
 						  <div class="collapse navbar-collapse navbar-ex1-collapse"> 
-								
+							<ul class="nav nav-tabs">
+	  
+							  <li role="presentation">
+							    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+							      Главная <span class=""></span>
+							    </a>
+							  </li>
+
+								<li role="presentation" class="dropdown">
+								    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+								      Услуги <span class="caret"></span>
+								    </a>
+									<ul class="dropdown-menu">
+									      <li>Макияж</li>
+									      <li>Имидж-дизайн</li>
+									</ul>
+								</li>
+
+							<li role="presentation">
+							    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+							      Прайс лист <span class=""></span>
+							    </a>
+							  </li>
+
+								<li role="presentation">
+								    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+								      Обо мне <span class=""></span>
+								    </a>
+								 </li>  
+
+						</ul>	
 						  </div>
 					</nav>
                     
